Create base HTML and header css

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pure Ocean O20 - Global Solution</title>
@@ -8,8 +9,221 @@
     <link rel="stylesheet" href="/FrontEnd/public/css/fonts.css">
     <link rel="stylesheet" href="/FrontEnd/public/css/global.css">
     <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#problem">Problema</a></li>
+                <li><div class="line"></div></li>
+
+                <li><a href="#technology">Tecnologia Utilizada</a></li>
+                <li><div class="line"></div></li>
+
+                <li><a href="#goals">Objetivos</a></li>
+                <li><div class="line"></div></li>
+
+                <li><a href="#public">Público Impactado</a></li>
+                <li><div class="line"></div></li>
+
+                <li><a href="#benefits">Benefícios</a></li>
+                <li><div class="line"></div></li>
+
+                <li><a href="#daily-impact">Utilidade da Solução</a></li>
+            </ul>
+        </nav>
+
+        <div>
+            <div>
+                <h1>PureOceanO20</h1>
+                <p>Tecnologia e conscientização para um oceano mais limpo e saudável</p>
+                <button class="saiba-mais-btn">Saiba Mais</button>
+            </div>
+            <img src="/FrontEnd/public/assets/images/drone.png" alt="Imagem de um drone">
+        </div>
+    </header>
+
+    <main>
+
+        <section class="problem-section" id="problem">
+            <div>
+                <h2>Problema</h2>
+                <p>Microplásticos nos oceanos afetam vida marinha e saúde humana. Nossa solução identifica e quantifica microplásticos em tempo real.</p>
+            </div>
+            <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem de micro plasticos">
+        </section>
+
+        <section class="technology-section" id="technology">
+            <div>
+                <h2>Nossa Tecnologia</h2>
+                <p>Usamos drones subaquáticos com sensores e câmeras. Algoritmos de IA detectam e classificam microplásticos automaticamente.</p>
+            </div>
+            <div class="technologies">
+                <div class="technology">
+                    <h3>Drones Subaquáticos</h3>
+                    <p>Drones de última geração equipados com sensores avançados e câmeras para exploração submarina.</p>
+                </div>
+                <div class="technology">
+                    <h3>Algoritimos de IA</h3>
+                    <p>Algoritmos de inteligência artificial de ponta que analisam e classificam partículas de microplástico em tempo real</p>
+                </div>
+                <div class="technology">
+                    <h3>Detecção em tempo real</h3>
+                    <p>Identificação e quantificação instantâneas de microplásticos usando tecnologia avançada de análise de imagem.</p>
+                </div>
+                <div class="technology">
+                    <h3>Classificação de partículas</h3>
+                    <p>Classificação automática de partículas de microplástico com base em forma, cor e outras características.</p>
+                </div>
+                <div class="technology">
+                    <h3>Plataforma de compartilhamento de dados</h3>
+                    <p>Uma plataforma online para compartilhamento de dados com o público, ONGs, empresas e autoridades governamentais</p>
+                </div>
+                <div class="technology">
+                    <h3>Mapas interativos</h3>
+                    <p>Mapas interativos que destacam áreas que precisam de ações de limpeza ou locais seguros para pesca.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="goals-section" id="goals">
+            <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem dos nossos objetivvos">
+            <div>
+                <h2>Objetivos</h2>
+                <div class="goals">
+                    <div class="goal-one">
+                        <h4>Objetivo 1</h4>
+                        <p>Reduzir a poluição por microplásticos e apoiar ações de limpeza.</p>
+                    </div>
+                    <div class="goal-two">
+                        <h4>Objetivo 2</h4>
+                        <p>Fornecer mapas interativos de locais seguros para pesca.</p>
+                    </div>
+                </div>
+                <button class="btn participe">Participe</button>
+            </div>
+        </section>
+
+        <section class="public-section" id="public">
+            <h2>Público Impactado</h2>
+            <p>Nossa solução é projetada para beneficiar uma ampla gama de partes interessadas, incluindo o público em geral, ONGs, empresas e autoridades governamentais. Ao fornecer uma plataforma abrangente para monitorar plásticos marinhos, nosso objetivo é envolver e capacitar esses grupos para tomar ação.</p>
+
+            <div class="cards">
+                <div class="card">
+                    <img src="/FrontEnd/public/assets/images/general_public.png" alt="Imagem de público png">
+                    <div>
+                        <h4>Público Geral</h4>
+                        <p>O público em geral desempenha um papel crucial na preservação de nossos oceanos. Nossa solução fornece a eles acesso a dados em tempo real sobre plásticos marinhos, permitindo que tomem decisões informadas e participem de esforços de limpeza</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/FrontEnd/public/assets/images/ngo.png" alt="Imagem da NGO OcensWell">
+                    <div>
+                        <h4>NGOs</h4>
+                        <p>As organizações não governamentais (ONGs) estão na vanguarda da conservação ambiental. Nossa solução equipa-os com as ferramentas e informações de que precisam para identificar áreas que precisam de limpeza e defender mudanças de políticas.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/FrontEnd/public/assets/images/company.png" alt="Imagem da Ocean Company">
+                    <div>
+                        <h4>Empresas</h4>
+                        <p>As empresas têm a responsabilidade de minimizar seu impacto no meio ambiente. Nossa solução ajuda as empresas a rastrear e reduzir seus resíduos plásticos, garantindo que operem de maneira sustentável e socialmente responsável.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="/FrontEnd/public/assets/images/government.png" alt="Imagem de governo">
+                    <div>
+                        <h4>Autoridades Governamentais</h4>
+                        <p>As autoridades governamentais têm o poder de promulgar políticas e regulamentos que protegem nossos oceanos. Nossa solução fornece a eles dados precisos e insights para informar a tomada de decisões e implementar medidas eficazes.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="benefits-section" id="benefits">
+            <h2>Benefícios</h2>
+            <p>Redução da poluição marinha. Melhoria na qualidade dos produtos. Maior eficiência em ações de limpeza.</p>
+
+            <div class="benefits">
+                <div class="benefit">
+                    <h3>Mitigar Riscos à Saúde</h3>
+                    <p>Nossa solução ajuda a mitigar os riscos à saúde associados aos microplásticos, garantindo um ambiente mais seguro para a vida marinha e os seres humanos.</p>
+                </div>
+
+                <div class="benefit">
+                    <h3>Melhorar Qualidade dos Alimentos</h3>
+                    <p>Ao monitorar e reduzir os microplásticos no oceano, nossa solução melhora a qualidade e a segurança dos frutos do mar e outros produtos alimentícios à base de mar</p>
+                </div>
+
+                <div class="benefit">
+                    <h3>Melhorar Eficiência do Governo</h3>
+                    <p>Com nosso sistema de monitoramento inteligente, os governos podem identificar eficientemente áreas que requerem ações de limpeza e alocar recursos de maneira eficaz.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="daily-impact-section" id="daily-impact">
+            <div>
+                <h2>Impacto na Vida Diária</h2>
+                <p>Nosso sistema inteligente de monitoramento de plásticos marinhos pode ter um impacto positivo na vida diária das pessoas. Ao identificar e quantificar microplásticos, podemos garantir alimentos mais seguros e um ambiente mais limpo.</p>
+            </div>
+            <img src="/FrontEnd/public/assets/images/fisherman.png" alt="Imagem de um pescador no celular">
+        </section>
+
+        <section class="faq">
+            <h2>FAQ</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="question">
+                        <h5>Contato</h5>
+                        <p>+</p>
+                    </div>
+                    <p>Para mais informações, por favor contate-nos em info@oceans20.com</p>
+                </div>
+
+                <div class="card">
+                    <div class="question">
+                        <h5>Política de Privacidade</h5>
+                        <p>+</p>
+                    </div>
+                    <p>Leia nossa política de privacidade para saber como protegemos suas informações pessoais.</p>
+                </div>
+
+                <div class="card">
+                    <div class="question">
+                        <h5>Termos de Serviço</h5>
+                        <p>+</p>
+                    </div>
+                    <p>Ao usar nosso site, você concorda com nossos termos de serviço.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="social-media">
+            <img src="/FrontEnd/public/assets/images/facebook.png" alt="Imagem do icone do Facebook">
+            <img src="/FrontEnd/public/assets/images/instagram.png" alt="Imagem do icone do Instagram">
+            <img src="/FrontEnd/public/assets/images/twitter.png" alt="Imagem do icone do Twitter">
+            <img src="/FrontEnd/public/assets/images/gmail.png" alt="Imagem do icone do Gmail">
+            <img src="/FrontEnd/public/assets/images/youtube.png" alt="Imagem do icone do Youtube">
+        </div>
+
+        <div class="other-sections">
+            <p>Home</p>
+            <p>Noticias</p>
+            <p>Sobre</p>
+            <p>Nosso Time</p>
+            <p>Constate-nos</p>
+        </div>
+
+        <p>Copyright ©2024; Designed with FIGMA</p>
+    </footer>
+
     <script src="index.js"></script>
 </body>
 </html>
