--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -51,7 +51,14 @@
                 <h2>Problema</h2>
                 <p>Microplásticos nos oceanos afetam vida marinha e saúde humana. Nossa solução identifica e quantifica microplásticos em tempo real.</p>
             </div>
-            <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem de micro plasticos">
+            <div class="carousel">
+                <div class="carousel-inner">
+                    <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem de micro plásticos 1" class="carousel-item active">
+                    <img src="/FrontEnd/public/assets/images/microplastics2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/microplastics3.png" alt="Imagem de micro plásticos 3" class="carousel-item">
+                </div>
+                <button class="carousel-control prev">&#10094;</button>
+                <button class="carousel-control next">&#10095;</button>
         </section>
 
         <section class="technology-section" id="technology">
