--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -64,32 +64,36 @@
         <section class="technology-section" id="technology">
             <div>
                 <h2>Nossa Tecnologia</h2>
-                <p>Usamos drones subaquáticos com sensores e câmeras. Algoritmos de IA detectam e classificam microplásticos automaticamente.</p>
+                <p class="subtitle">Usamos drones subaquáticos com sensores e câmeras. Algoritmos de IA detectam e classificam microplásticos automaticamente.</p>
             </div>
             <div class="technologies">
-                <div class="technology">
-                    <h3>Drones Subaquáticos</h3>
-                    <p>Drones de última geração equipados com sensores avançados e câmeras para exploração submarina.</p>
+                <div class="minor-box">
+                    <div class="technology">
+                        <h3>Drones Subaquáticos</h3>
+                        <p>Drones de última geração equipados com sensores avançados e câmeras para exploração submarina.</p>
+                    </div>
+                    <div class="technology">
+                        <h3>Algoritimos de IA</h3>
+                        <p>Algoritmos de inteligência artificial de ponta que analisam e classificam partículas de microplástico em tempo real</p>
+                    </div>
+                    <div class="technology">
+                        <h3>Detecção em tempo real</h3>
+                        <p>Identificação e quantificação instantâneas de microplásticos usando tecnologia avançada de análise de imagem.</p>
+                    </div>
+                    <div class="technology">
+                        <h3>Classificação de partículas</h3>
+                        <p>Classificação automática de partículas de microplástico com base em forma, cor e outras características.</p>
+                    </div>
                 </div>
-                <div class="technology">
-                    <h3>Algoritimos de IA</h3>
-                    <p>Algoritmos de inteligência artificial de ponta que analisam e classificam partículas de microplástico em tempo real</p>
-                </div>
-                <div class="technology">
-                    <h3>Detecção em tempo real</h3>
-                    <p>Identificação e quantificação instantâneas de microplásticos usando tecnologia avançada de análise de imagem.</p>
-                </div>
-                <div class="technology">
-                    <h3>Classificação de partículas</h3>
-                    <p>Classificação automática de partículas de microplástico com base em forma, cor e outras características.</p>
-                </div>
-                <div class="technology">
-                    <h3>Plataforma de compartilhamento de dados</h3>
-                    <p>Uma plataforma online para compartilhamento de dados com o público, ONGs, empresas e autoridades governamentais</p>
-                </div>
-                <div class="technology">
-                    <h3>Mapas interativos</h3>
-                    <p>Mapas interativos que destacam áreas que precisam de ações de limpeza ou locais seguros para pesca.</p>
+                <div class="greater-box">
+                    <div class="technology">
+                        <h3>Plataforma de compartilhamento de dados</h3>
+                        <p>Uma plataforma online para compartilhamento de dados com o público, ONGs, empresas e autoridades governamentais</p>
+                    </div>
+                    <div class="technology">
+                        <h3>Mapas interativos</h3>
+                        <p>Mapas interativos que destacam áreas que precisam de ações de limpeza ou locais seguros para pesca.</p>
+                    </div>
                 </div>
             </div>
         </section>
