Create the goals section CSS

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -53,12 +53,13 @@
             </div>
             <div class="carousel">
                 <div class="carousel-inner">
-                    <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem de micro plásticos 1" class="carousel-item active">
+                    <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem de micro plásticos 1" class="carousel-item">
                     <img src="/FrontEnd/public/assets/images/microplastics2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
                     <img src="/FrontEnd/public/assets/images/microplastics3.png" alt="Imagem de micro plásticos 3" class="carousel-item">
                 </div>
                 <button class="carousel-control prev">&#10094;</button>
                 <button class="carousel-control next">&#10095;</button>
+            </div>
         </section>
 
         <section class="technology-section" id="technology">
@@ -74,7 +75,7 @@
                     </div>
                     <div class="technology">
                         <h3>Algoritimos de IA</h3>
-                        <p>Algoritmos de inteligência artificial de ponta que analisam e classificam partículas de microplástico em tempo real</p>
+                        <p>Algoritmos de inteligência artificial de ponta que analisam e classificam partículas de microplástico em tempo real.</p>
                     </div>
                     <div class="technology">
                         <h3>Detecção em tempo real</h3>
@@ -88,7 +89,7 @@
                 <div class="greater-box">
                     <div class="technology">
                         <h3>Plataforma de compartilhamento de dados</h3>
-                        <p>Uma plataforma online para compartilhamento de dados com o público, ONGs, empresas e autoridades governamentais</p>
+                        <p>Uma plataforma online para compartilhamento de dados com o público, ONGs, empresas e autoridades governamentais.</p>
                     </div>
                     <div class="technology">
                         <h3>Mapas interativos</h3>
@@ -99,20 +100,28 @@
         </section>
 
         <section class="goals-section" id="goals">
-            <img src="/FrontEnd/public/assets/images/microplastics.png" alt="Imagem dos nossos objetivvos">
-            <div>
+            <div class="carousel">
+                <div class="carousel-inner">
+                    <img src="/FrontEnd/public/assets/images/cleaning_ocean.png" alt="Imagem de micro plásticos 1" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/cleaning_ocean2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de micro plásticos 3" class="carousel-item">
+                </div>
+                <button class="carousel-control prev">&#10094;</button>
+                <button class="carousel-control next">&#10095;</button>
+            </div>
+            <div class="goals-div">
                 <h2>Objetivos</h2>
                 <div class="goals">
-                    <div class="goal-one">
+                    <div class="goal">
                         <h4>Objetivo 1</h4>
                         <p>Reduzir a poluição por microplásticos e apoiar ações de limpeza.</p>
                     </div>
-                    <div class="goal-two">
+                    <div class="goal">
                         <h4>Objetivo 2</h4>
                         <p>Fornecer mapas interativos de locais seguros para pesca.</p>
                     </div>
                 </div>
-                <button class="btn participe">Participe</button>
+                <button class="participe-btn">Participe</button>
             </div>
         </section>
 
