Create the public CSS

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -127,7 +127,7 @@
 
         <section class="public-section" id="public">
             <h2>Público Impactado</h2>
-            <p>Nossa solução é projetada para beneficiar uma ampla gama de partes interessadas, incluindo o público em geral, ONGs, empresas e autoridades governamentais. Ao fornecer uma plataforma abrangente para monitorar plásticos marinhos, nosso objetivo é envolver e capacitar esses grupos para tomar ação.</p>
+            <p class="subtitle">Nossa solução é projetada para beneficiar uma ampla gama de partes interessadas, incluindo o público em geral, ONGs, empresas e autoridades governamentais. Ao fornecer uma plataforma abrangente para monitorar plásticos marinhos, nosso objetivo é envolver e capacitar esses grupos para tomar ação.</p>
 
             <div class="cards">
                 <div class="card">
@@ -157,7 +157,7 @@
                 <div class="card">
                     <img src="/FrontEnd/public/assets/images/government.png" alt="Imagem de governo">
                     <div>
-                        <h4>Autoridades Governamentais</h4>
+                        <h4>Governo</h4>
                         <p>As autoridades governamentais têm o poder de promulgar políticas e regulamentos que protegem nossos oceanos. Nossa solução fornece a eles dados precisos e insights para informar a tomada de decisões e implementar medidas eficazes.</p>
                     </div>
                 </div>
