Create the benfefit section CSS

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -165,13 +165,15 @@
         </section>
 
         <section class="benefits-section" id="benefits">
-            <h2>Benefícios</h2>
-            <p>Redução da poluição marinha. Melhoria na qualidade dos produtos. Maior eficiência em ações de limpeza.</p>
+            <div>
+                <h2>Benefícios</h2>
+                <p class="subtitle">Redução da poluição marinha. Melhoria na qualidade dos produtos. Maior eficiência em ações de limpeza.</p>
+            </div>
 
             <div class="benefits">
                 <div class="benefit">
                     <h3>Mitigar Riscos à Saúde</h3>
-                    <p>Nossa solução ajuda a mitigar os riscos à saúde associados aos microplásticos, garantindo um ambiente mais seguro para a vida marinha e os seres humanos.</p>
+                    <p>Nossa solução ajuda a mitigar os riscos à saúde associados aos microplásticos, garantindo um ambiente e alimentação mais seguro para a vida marinha e os seres humanos.</p>
                 </div>
 
                 <div class="benefit">
