--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -193,7 +193,15 @@
                 <h2>Impacto na Vida Diária</h2>
                 <p>Nosso sistema inteligente de monitoramento de plásticos marinhos pode ter um impacto positivo na vida diária das pessoas. Ao identificar e quantificar microplásticos, podemos garantir alimentos mais seguros e um ambiente mais limpo.</p>
             </div>
-            <img src="/FrontEnd/public/assets/images/fisherman.png" alt="Imagem de um pescador no celular">
+            <div class="carousel">
+                <div class="carousel-inner">
+                    <img src="/FrontEnd/public/assets/images/fisherman.png" alt="Imagem de micro plásticos 1" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/cleaning_ocean2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de micro plásticos 3" class="carousel-item">
+                </div>
+                <button class="carousel-control prev">&#10094;</button>
+                <button class="carousel-control next">&#10095;</button>
+            </div>
         </section>
 
         <section class="faq">
