Add new image to daily impact section and change alt text

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -195,9 +195,9 @@
             </div>
             <div class="carousel">
                 <div class="carousel-inner">
-                    <img src="/FrontEnd/public/assets/images/fisherman.png" alt="Imagem de micro plásticos 1" class="carousel-item">
-                    <img src="/FrontEnd/public/assets/images/cleaning_ocean2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
-                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de micro plásticos 3" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/fisherman.png" alt="Imagem de um pescador no celular" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/cooking_fish.png" alt="Imagem de um homem preparando peixe" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de um homem com vários peixes na mão" class="carousel-item">
                 </div>
                 <button class="carousel-control prev">&#10094;</button>
                 <button class="carousel-control next">&#10095;</button>
