Create the FAQ section CSS

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -210,28 +210,35 @@
                 <div class="card">
                     <div class="question">
                         <h5>Contato</h5>
-                        <p>+</p>
+                        <div class="toggle-sign-container">
+                            <p class="toggle-sign">+</p>
+                        </div>
                     </div>
-                    <p>Para mais informações, por favor contate-nos em info@oceans20.com</p>
+                    <p class="answer">Para mais informações, por favor contate-nos em info@oceans20.com</p>
                 </div>
 
                 <div class="card">
                     <div class="question">
                         <h5>Política de Privacidade</h5>
-                        <p>+</p>
+                        <div class="toggle-sign-container">
+                            <p class="toggle-sign">+</p>
+                        </div>
                     </div>
-                    <p>Leia nossa política de privacidade para saber como protegemos suas informações pessoais.</p>
+                    <p class="answer">Leia nossa política de privacidade para saber como protegemos suas informações pessoais.</p>
                 </div>
 
                 <div class="card">
                     <div class="question">
                         <h5>Termos de Serviço</h5>
-                        <p>+</p>
+                        <div class="toggle-sign-container">
+                            <p class="toggle-sign">+</p>
+                        </div>
                     </div>
-                    <p>Ao usar nosso site, você concorda com nossos termos de serviço.</p>
+                    <p class="answer">Ao usar nosso site, você concorda com nossos termos de serviço.</p>
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer>
