--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -243,19 +243,19 @@
 
     <footer>
         <div class="social-media">
-            <img src="/FrontEnd/public/assets/images/facebook.png" alt="Imagem do icone do Facebook">
-            <img src="/FrontEnd/public/assets/images/instagram.png" alt="Imagem do icone do Instagram">
-            <img src="/FrontEnd/public/assets/images/twitter.png" alt="Imagem do icone do Twitter">
-            <img src="/FrontEnd/public/assets/images/gmail.png" alt="Imagem do icone do Gmail">
-            <img src="/FrontEnd/public/assets/images/youtube.png" alt="Imagem do icone do Youtube">
+            <a href="#"><img src="/FrontEnd/public/assets/images/facebook.png" alt="Imagem do icone do Facebook"></a>
+            <a href="#"><img src="/FrontEnd/public/assets/images/instagram.png" alt="Imagem do icone do Instagram"></a>
+            <a href="#"><img src="/FrontEnd/public/assets/images/twitter.png" alt="Imagem do icone do Twitter"></a>
+            <a href="#"><img src="/FrontEnd/public/assets/images/gmail.png" alt="Imagem do icone do Gmail"></a>
+            <a href="#"><img src="/FrontEnd/public/assets/images/youtube.png" alt="Imagem do icone do Youtube"></a>
         </div>
 
         <div class="other-sections">
-            <p>Home</p>
-            <p>Noticias</p>
-            <p>Sobre</p>
-            <p>Nosso Time</p>
-            <p>Constate-nos</p>
+            <a href="#">Home</a>
+            <a href="#">Noticias</a>
+            <a href="#">Sobre</a>
+            <a href="#">Nosso Time</a>
+            <a href="#">Constate-nos</a>
         </div>
 
         <p>Copyright ©2024; Designed with FIGMA</p>
