--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -102,9 +102,9 @@
         <section class="goals-section" id="goals">
             <div class="carousel">
                 <div class="carousel-inner">
-                    <img src="/FrontEnd/public/assets/images/cleaning_ocean.png" alt="Imagem de micro plásticos 1" class="carousel-item">
-                    <img src="/FrontEnd/public/assets/images/cleaning_ocean2.png" alt="Imagem de micro plásticos 2" class="carousel-item">
-                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de micro plásticos 3" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/cleaning_ocean.png" alt="Imagem limpando o oceano com barcos" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/cleaning_ocean2.png" alt="Imagem de pessoas limpando o oceano" class="carousel-item">
+                    <img src="/FrontEnd/public/assets/images/fishing.png" alt="Imagem de um homem com vários peixes na mão" class="carousel-item">
                 </div>
                 <button class="carousel-control prev">&#10094;</button>
                 <button class="carousel-control next">&#10095;</button>
