Add alert when clicking "saiba mais"

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -38,7 +38,7 @@
             <div>
                 <h1>PureOceanO20</h1>
                 <p>Tecnologia e conscientização para um oceano mais limpo e saudável</p>
-                <button class="saiba-mais-btn">Saiba Mais</button>
+                <button class="saiba-mais-btn" id="saiba-mais-btn">Saiba Mais</button>
             </div>
             <img src="/FrontEnd/public/assets/images/drone.png" alt="Imagem de um drone">
         </div>
