Add a popup form and add validation to all entries

--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -121,7 +121,26 @@
                         <p>Fornecer mapas interativos de locais seguros para pesca.</p>
                     </div>
                 </div>
-                <button class="participe-btn">Participe</button>
+                <button class="participe-btn" id="participe-btn">Participe</button>
+            </div>
+
+            <div id="popup" class="popup">
+                <div class="popup-content">
+                    <span id="closePopup" class="close">&times;</span>
+                    <h2>Informações</h2>
+                    <form id="createAccountForm">
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" name="nome" required>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <label for="telefone">Telefone:</label>
+                        <input type="tel" id="telefone" name="telefone" required>
+
+                        <button type="submit" id="enviar">Enviar</button>
+                    </form>
+                </div>
             </div>
         </section>
 
@@ -260,7 +279,6 @@
 
         <p>Copyright ©2024; Designed with FIGMA</p>
     </footer>
-
     <script src="index.js"></script>
 </body>
 </html>
