--- a/FrontEnd/src/pages/home/index.html
+++ b/FrontEnd/src/pages/home/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger-menu" id="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav id="nav">
             <ul>
                 <li><a href="#problem">Problema</a></li>
                 <li><div class="line"></div></li>
